--- a/sass/layout/footer/_adress.scss
+++ b/sass/layout/footer/_adress.scss
@@ -1,11 +1,13 @@
 .address-section-list {
-  width: 231px;
+  width: 232px;
+  text-align: center;
   margin-top: 20px;
+  margin: auto;
 }
 
 .address-section-list .address-section-list__item {
   list-style-type: none;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .address-section-list__item {
