--- a/sass/layout/footer/_emailing.scss
+++ b/sass/layout/footer/_emailing.scss
@@ -1,5 +1,6 @@
 .emailing-section {
-  margin-left: 93px;
+  margin: auto;
+  margin-top: 60px;
 }
 
 .emailing-section__title {
@@ -10,14 +11,18 @@
   text-transform: uppercase;
   color: var(--logo-color-footer);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .emailing-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .emailing-container__filling {
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -27,6 +32,10 @@
   padding-left: 16px;
   outline: none;
   color: var(--logo-color-footer);
+
+  @media screen and (min-width: 1200px){
+    width: 358px;
+  }
 }
 
 .emailing-submit-button {
@@ -46,6 +55,7 @@
   border-radius: 4px;
   border: none;
   margin-left: 12px;
+  margin-top: 20px;
 }
 
 .emailing-submit-icon {
