--- a/sass/layout/footer/_footer.scss
+++ b/sass/layout/footer/_footer.scss
@@ -2,30 +2,44 @@
   background-color: var(--footer-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
+  display: block;
+  align-items: center;
+  text-align: center;
   & span {
     color: var(--logo-color-main);
   }
+
+  @media screen and(min-width: 768px){
+    display: flex;
+    align-items: baseline;
+  }
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
+ 
+
 
 .logo-footer {
+  display: block;
   margin-bottom: 20px;
   color: var(--logo-color-footer);
 }
 
 .subscription-container {
-  flex-direction: column;
-  align-items: baseline;
-  margin-left: 70px;
+display: block;
+margin-top: 60px;
+align-items: center;
+
+
+
+  // flex-direction: column;
+  // align-items: baseline;
+  // margin-left: 70px;
   & .subscription-container__title {
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 0.03em;
     color: var(--logo-color-footer);
     text-transform: uppercase;
+    text-align: center;
   }
 }
