--- a/sass/layout/header/_site-nav.scss
+++ b/sass/layout/header/_site-nav.scss
@@ -1,15 +1,23 @@
 .nav-container {
   display: flex;
-  align-items: center;
+  align-items: center; 
 }
 
 .site-nav-list {
-  width: 294px;
-  margin-right: 305px;
   display: flex;
+  margin-left: 87px;
   & li {
     list-style-type: none;
   }
+
+ @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
+
 }
 
 .site-nav-list__item {
