--- a/sass/layout/main/index/_activity.scss
+++ b/sass/layout/main/index/_activity.scss
@@ -1,5 +1,10 @@
 .activity-section {
-  padding-bottom: 94px;
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+    padding-bottom: 94px;
+  }
 }
 
 .activity-section__title {
