--- a/sass/layout/main/index/_customer.scss
+++ b/sass/layout/main/index/_customer.scss
@@ -13,19 +13,19 @@
 
 .customers-section__list {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: center;  
+  justify-content: center;
+  flex-direction: column;
+ 
   list-style-type: none;
   padding-bottom: 94px;
+  gap: 30px;
 }
 
-.customers-section__list__item {
-  display: flex;
+.customers-section__list__item__link {
+  display: block;
   width: 170px;
-  height: 92px;
-  margin-right: 30px;
-  &:last-child {
-    margin-right: 0px;
-  }
 }
 
 .customers-section__list__item__link {
