--- a/sass/layout/main/index/_hero.scss
+++ b/sass/layout/main/index/_hero.scss
@@ -1,7 +1,16 @@
 .hero-section {
+  max-width: 1600px;
   margin: 0 auto;
-  padding-top: 200px;
+  text-align: center;
+
+  padding-top: 118px;
+  padding-bottom: 118px;
+
+   @media screen and(min-width: 1200px){
+    padding-top: 200px;
   padding-bottom: 200px;
+   }
+
   background-color: var(--footer-background-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -11,20 +20,31 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  max-width: 1600px;
+  
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero/bg-img_sm@2x.jpg);
+
+
   & .hero-section__title {
     font-weight: 900;
-    font-size: 44px;
+    font-size: 26px;
     line-height: 1.4;
     letter-spacing: 0.06em;
-    color: var(--logo-color-footer);
     text-transform: uppercase;
+    color: var(--logo-color-footer);
+ 
     text-align: center;
     align-items: center;
-    width: 696px;
+
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      max-width: 696px;
+      font-size: 44px;
+    }
   }
 }
 
@@ -53,4 +73,5 @@
   &:focus {
     border-radius: 4px;
   }
+}
 }
