--- a/sass/layout/main/index/_team.scss
+++ b/sass/layout/main/index/_team.scss
@@ -1,7 +1,8 @@
 .team-section {
   background-color: var(--team-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 30px;
+  padding-bottom:30px;
+
 }
 
 .team-section__title {
@@ -10,21 +11,39 @@
   line-height: 1.2;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-bottom: 50px;
 }
 
 .team-section__list {
   display: flex;
+  flex-wrap: wrap;
+
+  margin-bottom: 60px;
+  justify-content: center;
 }
+
 .team-section__list__items {
   width: 270px;
   list-style-type: none;
+
+  margin-top: 30px;
   margin-right: 30px;
+
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+
   & img {
     display: block;
   }
-  &:last-child {
+  &:nth-last-child(1){
     margin-right: 0px;
+  }
+
+
+  @media screen and(min-width: 1200px) {
+    margin-top: 50px;
+    margin-bottom: 94px;
   }
 }
 
