--- a/sass/layout/main/portfolio/_filter.scss
+++ b/sass/layout/main/portfolio/_filter.scss
@@ -1,11 +1,25 @@
 .filter-container {
-  margin-bottom: 34px;
+margin-bottom: 40px;
+
+@media screen and (min-width: 768px){
+margin-bottom: 14px;
+  }
+  
+@media screen and (min-width: 1200px){
+margin-bottom: 34px;
+  }
 }
 
 .portfolio-filter-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+    margin-bottom: 35px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+  @media screen and (min-width: 1200px){
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .portfolio-filter-list__items {
@@ -13,6 +27,7 @@
   text-decoration: none;
   display: inline;
   text-align: left;
+  margin-bottom: 15px;
   &:not(:last-child) {
     margin-right: 8px;
   }
@@ -27,13 +42,12 @@
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.03em;
+
   border: none;
   border-radius: 4px;
   border-width: 1px;
   border-color: var(--logo-color-header);
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
+
   color: var(--nav-color);
   padding: 6px 22px 6px 22px;
   transition-duration: 250ms;
@@ -46,4 +60,9 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+
+ 
 }
+
+
+
