--- a/sass/layout/main/portfolio/_gallerie.scss
+++ b/sass/layout/main/portfolio/_gallerie.scss
@@ -1,31 +1,66 @@
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: 30px;
-  margin-right: -30px;
-  align-items: center;
+  justify-content: center;
+  margin: -15px;
+   align-items: center;
+
+  @media screen and (min-width: 768px) {
+  justify-content: start;
+    }
+
   &:nth-child(3n) {
     margin-left: 0px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  margin-right: 30px;
+  margin-right: -30px;
   }
 }
 
 .portfolio-list__item {
   list-style-type: none;
-  flex-basis: calc((100% - 90px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
+
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:nth-child(3n + 3) {
-    margin-right: 0px;
+
+  margin-bottom: 30px; 
+  &:nth-last-child(-n + 1) {
+  margin-bottom: 0px;
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
-  }
+
+  flex-basis: 100%;
+
   &:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: 354px;
+ 
+  //   margin-right: 30px;
+  //   &:nth-child(even) {
+  //   margin-right: 0px;
+  // }
+  
+  }
+
+  @media screen and (min-width: 1200px) {
+   flex-basis: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;  
+    &:nth-child(3n + 3) {
+      margin-right: 0px;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0px;
+  }
+  }
+
+
+  
 }
 
 .portfolio-item-wrapper {
