--- a/sass/layout/main/portfolio/_portfolio.scss
+++ b/sass/layout/main/portfolio/_portfolio.scss
@@ -1,8 +1,15 @@
 .main-content-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  
+  @media screen and (min-width: 768px){
+
+   }
+  
+  @media screen and (min-width: 1200px){
+   padding-top: 94px;
+  padding-bottom: 94px; 
+  }
+  
 }
 
-.portfolio-container {
-  width: 1170px;
-}
