--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./layout/main/index/activity";
 @import "./layout/main/index/benefits";
 @import "./layout/header/header";
+@import "./layout/header/menu";
 @import "./layout/main/portfolio/filter";
 @import "./layout/main/portfolio/gallerie";
 @import "./layout/footer/footer";
@@ -14,6 +15,7 @@
 @import "./layout/footer/emailing";
 @import "./layout/main/index/socials";
 @import "./layout/footer/socials-footer";
+
 
 @import "./components/logo";
 @import "./components/container";
