--- a/sass/layout/footer/_adress.scss
+++ b/sass/layout/footer/_adress.scss
@@ -3,6 +3,10 @@
   text-align: center;
   margin-top: 20px;
   margin: auto;
+
+  @media screen and(min-width: 768px){
+    text-align: left;
+  }
 }
 
 .address-section-list .address-section-list__item {
