--- a/sass/layout/footer/_footer.scss
+++ b/sass/layout/footer/_footer.scss
@@ -13,6 +13,9 @@
     display: flex;
     align-items: baseline;
   }
+  @media screen and(min-width: 1200px){
+    
+  }
 }
 
  
@@ -22,6 +25,10 @@
   display: block;
   margin-bottom: 20px;
   color: var(--logo-color-footer);
+
+  @media screen and(min-width: 768px){
+    display: flex;
+  }
 }
 
 .subscription-container {
@@ -29,11 +36,16 @@ display: block;
 margin-top: 60px;
 align-items: center;
 
+@media screen and(min-width: 1200px){
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-left: 70px;
+}
 
 
-  // flex-direction: column;
-  // align-items: baseline;
-  // margin-left: 70px;
+
+ 
   & .subscription-container__title {
     font-size: 14px;
     font-weight: bold;
