--- a/sass/layout/main/index/_customer.scss
+++ b/sass/layout/main/index/_customer.scss
@@ -14,19 +14,38 @@
 .customers-section__list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;  
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: -30px;
+  
  
   list-style-type: none;
   padding-bottom: 94px;
-  gap: 30px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 50px;
+  }
+  @media screen and (min-width: 1200px) {
+  justify-content: space-around;
+}
 }
 
-.customers-section__list__item__link {
-  display: block;
-  width: 170px;
+.customers-section__list__item {
+  margin-bottom: 30px;
+
+ 
+  @media screen and (min-width: 768px) and (max-width: 1199px){
+    width: calc(100% / 3 - 15px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0px;
+
+  }
 }
+
+
 
 .customers-section__list__item__link {
   & .customers-section__list__item__link__logo {
