--- a/sass/layout/main/index/_hero.scss
+++ b/sass/layout/main/index/_hero.scss
@@ -16,14 +16,62 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/bg-image.jpg);
+    url(../images/mobile/hero-480@1x.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
   
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero/bg-img_sm@2x.jpg);
+  @media screen and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/mobile/hero-480@2x.jpg);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/tablet/hero-768@1x.jpg);
+}
+@media screen and (min-device-pixel-ratio: 2),
+  (min-width: 768px) and (max-width: 1199px),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/tablet/hero-768@2x.jpg);
+}
+@media screen and (min-width: 1200px) {
+  min-height: 600px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/desktop/hero-1200@1x.jpg);
+}
+@media screen and (min-device-pixel-ratio: 2),
+  (min-width: 1200px),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  min-height: 600px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/desktop/hero-1200@2x.jpg);
+}
 
 
   & .hero-section__title {
@@ -73,5 +121,4 @@
   &:focus {
     border-radius: 4px;
   }
-}
 }
