--- a/css/main.css
+++ b/css/main.css
@@ -586,19 +586,24 @@
   background-color: var(--footer-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
-  display: block;
+  display: flex;
   align-items: center;
   text-align: center;
+  flex-direction: column;
+  justify-content: center;
 }
 .page-footer span {
   color: var(--logo-color-main);
 }
 @media screen and (min-width: 768px) {
   .page-footer {
-    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: baseline;
   }
 }
+
 .logo-footer {
   display: block;
   margin-bottom: 20px;
@@ -609,19 +614,18 @@
     display: flex;
   }
 }
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    text-align: left;
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
 
 .subscription-container {
   display: block;
   margin-top: 60px;
   align-items: center;
-}
-@media screen and (min-width: 1200px) {
-  .subscription-container {
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    margin-left: 70px;
-  }
 }
 .subscription-container .subscription-container__title {
   font-size: 14px;
@@ -640,7 +644,7 @@
 }
 @media screen and (min-width: 768px) {
   .address-section-list {
-    text-align: left;
+    margin: 0;
   }
 }
 
