--- a/sass/layout/footer/_footer.scss
+++ b/sass/layout/footer/_footer.scss
@@ -2,24 +2,24 @@
   background-color: var(--footer-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
-  display: block;
+
+  display: flex;
   align-items: center;
   text-align: center;
+  flex-direction: column;
+  justify-content: center;
   & span {
     color: var(--logo-color-main);
   }
 
   @media screen and(min-width: 768px){
-    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: baseline;
   }
-  @media screen and(min-width: 1200px){
-    
-  }
 }
-
  
-
 
 .logo-footer {
   display: block;
@@ -28,7 +28,15 @@
 
   @media screen and(min-width: 768px){
     display: flex;
+ 
   }
+
+  @media screen and(min-width: 1200px){
+    text-align: left;
+    font-size: 26px;
+    line-height: 1.19;
+  }
+
 }
 
 .subscription-container {
@@ -36,12 +44,12 @@ display: block;
 margin-top: 60px;
 align-items: center;
 
-@media screen and(min-width: 1200px){
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-  margin-left: 70px;
-}
+// @media screen and(min-width: 1200px){
+//   display: flex;
+//   flex-direction: column;
+//   align-items: baseline;
+//   margin-left: 70px;
+// }
 
 
 
