--- a/sass/layout/footer/_socials-footer.scss
+++ b/sass/layout/footer/_socials-footer.scss
@@ -1,3 +1,8 @@
+.subscription-container {
+  @media screen and(min-width: 1200px) {
+}
+}
+
 .socials-footer-list {
   display: flex;
   justify-content: center;
